improve dark mode

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,8 +78,10 @@ jobs:
         id: cache-logo
         uses: actions/cache@v4
         with:
-          path: logos/tuda_logo.svg
-          key: tuda-logo-svg
+          path: |
+            logos/tuda_logo.svg
+            logos/tuda_logo-dark.svg
+          key: tuda-logo-v2-svg
 
       - name: Set up Docker Buildx
         if: steps.cache-logo.outputs.cache-hit != 'true'
